# bizra-node0-genesis

./: COMPREHENSIVE_MULTI_LENS_ANALYSIS_REPORT.md  COMPREHENSIVE_SAPE_FRAMEWORK_ANALYSIS.md  CRITICAL_ACTION_ITEMS.md  EXECUTIVE_SUMMARY_SAPE_ANALYSIS.md  FUNDAMENTAL-RULE.md  IMPLEMENTATION-PACKAGE-INDEX.md  LOCAL-DEPLOYMENT-COMPLETE-2025-10-26.md  NEURAL_INSIGHT.md  NODE0-GENESIS-ROADMAP-100K-TPS.md  PEAK_MASTERPIECE_ACHIEVEMENT.md  PEAK_MASTERPIECE_VALIDATION_EVIDENCE.md  README.md  SAPE_ANALYSIS_README.md  package-lock.json  package.json
.github/workflows/: resilience-mesh.yml
ace-framework/: resilience-reflector.js
bizra-ui/: .gitignore  .lighthouserc.js  ARCHITECTURE_DOCUMENTATION.md  CONTRIBUTING.md  DEVOPS_BLUEPRINT.md  DEVOPS_IMPLEMENTATION_COMPLETE.md  Dockerfile  ELITE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  PROJECT_SUMMARY.md  QA_STANDARDS.md  README.md  SYSTEM_ARCHITECTURE.md  SYSTEM_INTEGRITY_REPORT.md  docker-compose.yml  jest.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json
bizra-ui/.github/: dependabot.yml
bizra-ui/.husky/: commit-msg  pre-commit
bizra-ui/app/: globals.css  layout.tsx  page.tsx
bizra-ui/components/: advanced-tokenomics.tsx  akqa-hero.tsx  architecture.tsx  brand-architecture.tsx  brand-creativity.tsx  brand-evolution.tsx  brand-transformation.tsx  campaign-showcase.tsx  clarity-focus.tsx  contact.tsx  conversion-funnel.tsx  conversion-optimization.tsx  creative-branding.tsx  cultural-symbol.tsx  data-driven-results.tsx  design-system.tsx  development-mastery.tsx  digital-ecosystem.tsx  digital-innovation.tsx  digital-transformation.tsx  dual-agency.tsx  elite-founders.tsx  engagement-metrics.tsx  enterprise-value.tsx  error-boundary.tsx  experience-architecture.tsx  experience-journey.tsx  experience-led-design.tsx  footer.tsx  fortune500-trust.tsx  global-impact.tsx  hero.tsx  huge-hero.tsx  human-os.tsx  iconic-brand.tsx  immersive-experience.tsx  innovation-results.tsx  innovative-products.tsx  interactive-architecture.tsx  join-founders.tsx  (+25 more)
bizra-ui/e2e/: example.spec.ts
bizra-ui/hooks/: use-scroll.ts  use-websocket.ts
bizra-ui/lib/: alpha100-validation.ts  i18n.ts  validation.ts
bizra-ui/scripts/: deploy.sh  performance-budget.js  quality-gate.js
bizra-ui/types/: vanta.d.ts
docs/: AHSAN-DESIGN-SYSTEM.md  AI-COLLABORATION.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT-FINDINGS.md  BATCH-VERIFY-BENCHMARK-REPORT.md  BATCH-VERIFY-SECURITY-ANALYSIS.md  BENCHMARK-QUICK-REFERENCE.md  BIZRA-D  BIZRA-HyperBlockTree-Dual-Agentic-Visualization.md  BIZRA-Islamic-Finance-Security-Matrix.md  BIZRA-Post-Quantum-Cryptography-Specifications.md  BIZRA-SC-NODE0-INTEGRATION-CONSENSUS.md  BIZRA-SOVEREIGN-ARCHITECTURE-BLUEPRINT.md  BIZRA-Sovereign-CICD-Deployment-Pipeline.md  BIZRA-Sovereign-DevOps-Pipeline-Framework.md  BIZRA_API_REFERENCE.md  BOTTLENECK-ANALYSIS-SUMMARY.md  CACHE-SERVICE-BOTTLENECK-ANALYSIS.md  CIRCUIT-BREAKER-IMPLEMENTATION-SUMMARY.md  COMPREHENSIVE-SDLC-PMLC-IMPLEMENTATION-PLAN.md  COMPREHENSIVE-STATUS-REPORT-20251018.md  COMPREHENSIVE_IMPLEMENTATION_BLUEPRINT.md  CONTRIBUTING.md  CRITERION-BENCHMARK-RESULTS.md  DASHBOARD_SETUP.md  DATABASE-PERFORMANCE-BOTTLENECK-ANALYSIS.md  DEPLOYMENT-EXECUTION-LOG.md  DEPLOYMENT-NEXT-STEPS.md  DEPLOYMENT-READY-SUMMARY.md  DEPLOYMENT-RUNBOOK-V2.2.0-RC1.md  DEVOPS_AUTOMATION_QUICK_START.md  DOCKER-BUILD-GUIDE.md  DUAL-AGENTIC-EMULATION-VALIDATION.md  ENTERPRISE-IMPLEMENTATION-BLUEPRINT.md  ENVIRONMENT.sample  GENESIS.md  GETTING-STARTED.md  GO-NO-GO-DECISION-FRAMEWORK.md  GO-NO-GO-DECISION-V2.2.0-RC1.md  (+68 more)
docs/api/: authentication.md  error-handling.md  openapi.yaml  (+3 more)
node0/: ai-local-service.js  api.py  apt-meta-coordinator.js  autonomous-data-processor.js  bizra-api.py  bizra-startup.js  bizra-wow-factor-demo.js  bizra_node_complete.js  bizra_validation_api.js  consensus_api_routes.js  data-visualization-engine.js  dataset-generation-coordinator.js  enhanced_api.js  knowledge-builder.js  local-impact-measurement.js  mcp-filesystem.js  mcp-web-browser.js  momo-personal-dashboard.js  observability_middleware.js  p2p_api_routes.js  peak-dashboard-cli.js  peak-masterpiece-phase4.js  production-api-server.js  prometheus_bridge.js  prometheus_metrics.py  prometheus_metrics_endpoint.py  runtime_metrics.json  session-hook-system.js  storytelling-dashboard.js  synaptic-hyperdrive-api-clean.py  synaptic-hyperdrive-api.py  system-integration-coordinator.js  system_metrics_api.js  unified-data-ingestion-system.js  validator_api_routes.js  websocket_server.js
prompts/: sape_v1_infinite.md
rust/: Cargo.toml  CBIZRA-NODE0docsCRITERION-BENCHMARK-RESULTS.md
rust/.cargo/: config.toml
rust/bizra_node/: Cargo.toml
rust/bizra_node/src/: lib.rs
rust/consensus/: Cargo.toml
rust/consensus/benches/: finality.rs
rust/consensus/src/: block_graph.rs  block_graph_extra_tests.rs  hotstuff.rs  lib.rs  lib_tests.rs
rust/consensus/tests/: wq_head_determinism.rs
rust/network/: Cargo.toml
rust/network/src/: behavior.rs  config.rs  error.rs  gossip.rs  identity.rs  lib.rs  peer_manager.rs  transport.rs
rust/poi/: Cargo.toml
rust/poi/benches/: attestation.rs  batch_verify.rs
rust/poi/src/: lib.rs
rust/poi/tests/: throughput_batch.rs
rust/synthesis_orchestrator/: Cargo.toml
rust/synthesis_orchestrator/src/: consensus.rs  ihsan_gate.rs  kernel.rs  lib.rs  parser.rs  routing.rs  telemetry.rs  trust_bridge.rs  types.rs
rust/validator/: Cargo.toml
rust/validator/src/: lib.rs  poi.rs  registry.rs  reputation.rs  slashing.rs  types.rs
rust/validator_napi/: Cargo.toml  index.d.ts  index.js  package.json
rust/validator_napi/src/: lib.rs
scripts/: test_meta_federation_slo.js
src/: cli.js  config.js  index.ts  main.rs
tests/: README.md  TESTING-SUMMARY.md  circuit-breaker-performance.bench.ts  circuit-breaker.test.ts  claude-remote-access.test.js  load-test-10k.js  meta_systems.test.js  metrics.parser.test.ts  setup.ts  validate-vllm-performance.py  validation-service.test.ts
(+551 files in other folders)
