[workspace]
members = ["consensus","poi","validator","bizra_node","network","synthesis_orchestrator"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Metrics
metrics = "0.21"
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

[workspace.lints.rust]
unsafe_code = "forbid"
