
[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
blake3 = { version = "1", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
chrono = "0.4"

[[bench]]
name = "finality"
harness = false
