
[package]
name = "poi"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "=2.1.0"
blake3 = "=1.5.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
once_cell = "1.19"
prometheus = "0.13"

[features]
default = []
# enables batch verify from env flag POI_BATCH_VERIFY=1
batch = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "attestation"
harness = false

[[bench]]
name = "batch_verify"
harness = false
required-features = ["batch"]
