[package]
name = "synthesis_orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["BIZRA Systems <dev@bizra.ai>"]
description = "BIZRA Synthesis Orchestrator - Production-grade multi-model consensus with Ihsān quality enforcement"
license = "MIT"

[features]
# Portable SIMD - default off for widest compatibility
simd = ["dep:simd-json"]

# x86_64 optimizations (opt-in)
avx2 = []
avx512 = []

# Linux-specific I/O optimization
io-uring = ["dep:io-uring"]

# HTTP façade for TypeScript integration
http-server = ["dep:axum", "dep:tower", "dep:tower-http"]

# Full observability stack
observability = ["dep:tracing-subscriber", "dep:opentelemetry"]

# Default features for development
default = ["simd", "http-server"]

[dependencies]
# Core async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simd-json = { version = "0.13", optional = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Cryptography for trust bridge
ring = "0.17"
blake3 = "1.5"

# Data structures
hashbrown = "0.14"
bytes = "1.5"

# Randomness for Thompson sampling
rand = "0.8"
rand_distr = "0.4"

# Feature-gated dependencies
io-uring = { version = "0.6", optional = true }

# HTTP server (optional)
axum = { version = "0.7", optional = true, features = ["json"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }

# Observability (optional)
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }
opentelemetry = { version = "0.21", optional = true }

# Utilities
cfg-if = "1.0"
hex = "0.4"
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[target.'cfg(all(target_os = "linux"))'.dependencies]
io-uring = { version = "0.6", optional = true }

[lints.rust]
unsafe_code = "forbid"
