[package]
name = "validator"
version = "0.1.0"
edition = "2021"
authors = ["BIZRA Team"]
license = "MIT OR Apache-2.0"
description = "BIZRA Validator Set Management - Registration, lifecycle, PoI weighting, and reputation"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Cryptography
ed25519-dalek = "=2.1.0"
blake3 = "1.5"

# PoI integration
poi = { path = "../poi" }

# Serialization
bincode = { workspace = true }

# Metrics
prometheus = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

# TODO Day 11: Add validator benchmarks
# [[bench]]
# name = "validator_bench"
# harness = false
